# bio-board

./: .env.example  .gitignore  DEPLOY.md  README.md  ROADMAP.md  docker-compose.yml  generate_samples.py  package.json  sample_tasks.xlsx  vercel.json
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: command_engine.py  excel_service.py  llm_agent.py  main.py  mcp_server.py  models.py  store.py
backend/app/routes/: __init__.py  chat.py  excel.py  plan.py  settings.py  tasks.py
backend/tests/: test_command_engine.py  test_core.py  test_e2e.py  test_intent.py  test_routes.py
brainstorm/: faq.md  synthesis.md
brainstorm/2026-05-15-ai-gantt-planner/: analysis.md  answers.md  cases.md  context.md  diagrams.md  plan.md  questions.md  risks.md
brainstorm/2026-05-18-chat-command-suggestions/: analysis.md  cases.md  context.md  diagrams.md  plan.md  questions.md  risks.md
examples/: biotech_startup_2026-05-18.xlsx  complex_project.xlsx  no_dependencies.xlsx  parallel_modules.xlsx  simple_pipeline.xlsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/api/: auth.ts  chat.ts  client.ts  excel.ts  settings.ts  sse.ts  tasks.ts
frontend/src/components/: AuthModal.tsx  ChatPanel.tsx  CommandOverlay.tsx  ConfirmModal.tsx  ContextMenu.tsx  CreateTaskModal.tsx  ExcelHandler.tsx  GanttView.tsx  Header.tsx  KanbanView.tsx  Notification.tsx  SettingsModal.tsx  SuggestionsPanel.tsx  TaskFormModal.tsx  TaskModal.tsx  ViewSwitcher.tsx
frontend/src/data/: commands.ts  demoTasks.ts
frontend/src/hooks/: useAppActions.ts  useGantt.ts
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  secret.yaml
(+7 files in other folders)
