[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-gantt-planner"
version = "0.1.0"
description = "AI-powered Gantt chart planner with MCP integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "mcp>=1.0.0",
    "openai>=1.40.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
