[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-gantt-planner"
version = "0.1.0"
description = "AI-powered Gantt chart planner with MCP integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "mcp>=1.0.0",
    "openai>=1.40.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27.0", "pytest-asyncio>=0.24.0"]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "types-passlib>=1.7.0"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
strict = true
warn_return_any = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
